--- a/_includes/Nav.html
+++ b/_includes/Nav.html
@@ -54,19 +54,16 @@
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
         <a href="{{'/notes' | relative_url}}" class="navbar-item">
-          Demo Feed
+          Brain
         </a>
         <a href="../post/how-to" class="navbar-item">
           How To
         </a>
-        <a href="https://github.com/Jekyll-Garden/jekyll-garden.github.io" target="_blank" class="navbar-item">
-          Github
+        <a href="https://www.maxdonati.com" target="_blank" class="navbar-item">
+          Website
         </a>
-        <a href="https://jekyllrb.com/" target="_blank" class="navbar-item">
-          Jekyll
-        </a>
-        <a href="https://obsidian.md/"  target="_blank" class="navbar-item">
-          Obsidian
+        <a href="https://twitter.com/maxdonati/" target="_blank" class="navbar-item">
+          Twitter
         </a>
       </div>
       <div class="navbar-end is-hidden-mobile" onclick="modeSwitcher()" >
